--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -2,12 +2,14 @@
 include ../../mk/config.base.mk
 include ../../$(CONFIG)
 
-EXTRA_CFLAGS = -I../../include/
-LDFLAGS += -L../ -l$(LIB_NAME:lib%.so=%) -lpthread
+EXTRA_CFLAGS = -I../../include/ $(CV_CFLAGS)
+LDFLAGS += -L../ -l$(LIB_NAME:lib%.so=%) -lpthread $(CV_LDFLAGS)
 
 INCLUDES= ../../include/svr/*.h ../../include/svr/server/*.h ../../include/svr.h
 
-SRC= client.c event.c main.c fullreencoder.c messagehandlers.c messagerouting.c server.c source.c stream.c
+SRC= client.c event.c main.c fullreencoder.c messagehandlers.c \
+	messagerouting.c server.c source.c stream.c source_test.c \
+	reencoder.c
 OBJ= $(SRC:.c=.o)
 
 all: $(SERVER_NAME)
