Another big commit of new code
Encoding has been restructured, and a raw endcoding with encoding and
decoding has been written. The full reencoder has been rewritten to be
compatible with the new encoding organization.

The server should be ready to test with a basic client application now.

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -5,9 +5,10 @@ include ../../$(CONFIG)
 EXTRA_CFLAGS = -I../../include/ $(CV_CFLAGS)
 LDFLAGS += -L../ -l$(LIB_NAME:lib%.so=%) -lpthread $(CV_LDFLAGS)
 
-INCLUDES= ../../include/svr/*.h ../../include/svr/server/*.h ../../include/svr.h
+INCLUDES= ../../include/svr/*.h ../../include/svr/server/*.h \
+	../../include/svr.h reencoders/reencoders.h
 
-SRC= client.c event.c main.c fullreencoder.c messagehandlers.c \
+SRC= client.c event.c main.c reencoders/fullreencoder.c messagehandlers.c \
 	messagerouting.c server.c source.c stream.c source_test.c \
 	reencoder.c
 OBJ= $(SRC:.c=.o)
@@ -23,7 +24,7 @@ $(SERVER_NAME): $(OBJ)
 $(OBJ): $(INCLUDES)
 
 clean:
-	-rm -f $(OBJ) $(HUB_NAME) 2> /dev/null
+	-rm -f $(OBJ) $(SERVER_NAME) 2> /dev/null
 
 install: $(SERVER_NAME)
 	install -m 0755 $(SERVER_NAME) $(PREFIX)/bin
