--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,8 @@ LDFLAGS += $(EXTRA_LDFLAGS)
 
 INCLUDES= ../include/svr/*.h ../include/svr.h
 
-SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c frameproperties.c encoding.c
+SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c \
+	frameproperties.c encoding.c lockable.c main.c encodings/raw.c
 OBJ = $(SRC:.c=.o)
 
 all: $(LIB_NAME)
