Response set object. Used to generically allocate request IDs and performing block waits for the responses

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,8 @@ LDFLAGS += $(EXTRA_LDFLAGS)
 INCLUDES= ../include/svr/*.h ../include/svr.h
 
 SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c \
-	frameproperties.c encoding.c lockable.c main.c encodings/raw.c
+	frameproperties.c encoding.c lockable.c main.c encodings/raw.c \
+	responseset.c
 OBJ = $(SRC:.c=.o)
 
 all: $(LIB_NAME)
