--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ INCLUDES= ../include/svr/*.h ../include/svr.h
 
 SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c \
 	frameproperties.c encoding.c lockable.c main.c encodings/raw.c \
-	responseset.c messagerouting.c messagehandlers.c
+	responseset.c messagerouting.c messagehandlers.c stream.c comm.c
 OBJ = $(SRC:.c=.o)
 
 all: $(LIB_NAME)
