--- a/src/Makefile
+++ b/src/Makefile
@@ -11,10 +11,10 @@ LDFLAGS += $(EXTRA_LDFLAGS)
 
 INCLUDES= ../include/svr/*.h ../include/svr.h
 
-SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c \
-	frameproperties.c encoding.c lockable.c main.c encodings/raw.c \
-	responseset.c messagerouting.c messagehandlers.c stream.c comm.c \
-	encodings/jpeg.c
+SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c	\
+	frameproperties.c encoding.c lockable.c main.c encodings/raw.c		\
+	responseset.c messagerouting.c messagehandlers.c stream.c source.c	\
+	comm.c encodings/jpeg.c
 OBJ = $(SRC:.c=.o)
 
 all: $(LIB_NAME)
