Build fixed following refactoring
Server code has been moved under a top level directory called server.
The server include files have been made seperate from the library
include files and are now under server/include. The SVRs prefix used in
the server code has been changed to SVRD because it sounds and looks
nicer.

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,12 +1,11 @@
 
-include ../../mk/config.base.mk
-include ../../$(CONFIG)
+include ../mk/config.base.mk
+include ../$(CONFIG)
 
-EXTRA_CFLAGS = -I../../include/ $(CV_CFLAGS)
-LDFLAGS += -L../ -l$(LIB_NAME:lib%.so=%) -lpthread $(CV_LDFLAGS)
+EXTRA_CFLAGS = -I../include/ -Iinclude $(CV_CFLAGS)
+LDFLAGS += -L../lib/ -l$(LIB_NAME:lib%.so=%) -lpthread $(CV_LDFLAGS)
 
-INCLUDES= ../../include/svr/*.h ../../include/svr/server/*.h \
-	../../include/svr.h
+INCLUDES= ../include/svr/*.h ../include/svr.h include/svrd/*.h include/svrd.h 
 
 SRC= client.c event.c main.c messagehandlers.c messagerouting.c server.c \
 	source.c stream.c sources/test.c sources/cam.c sources/file.c
