Refactor source descriptor into general purpose 'option string' support

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -14,7 +14,7 @@ INCLUDES= ../include/svr/*.h ../include/svr.h
 SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c	\
 	frameproperties.c encoding.c lockable.c main.c encodings/raw.c		\
 	responseset.c messagerouting.c messagehandlers.c stream.c source.c	\
-	comm.c encodings/jpeg.c
+	comm.c optionstring.c encodings/jpeg.c
 OBJ = $(SRC:.c=.o)
 
 all: $(LIB_NAME)
