Add Darwin (Mac OS X) support

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,8 +4,7 @@ include ../$(CONFIG)
 
 EXTRA_CFLAGS = -fPIC -I../include/ $(CV_CFLAGS)
 
-SONAME = $(LIB_NAME).$(MAJOR)
-LDFLAGS += -lpthread -lseawolf -ljpeg --shared -Wl,-soname,$(SONAME)
+LDFLAGS += -lpthread -lseawolf -ljpeg
 LDFLAGS += $(CV_LDFLAGS)
 LDFLAGS += $(EXTRA_LDFLAGS)
 
@@ -17,10 +16,11 @@ SRC = blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c	\
 	comm.c optionstring.c encodings/jpeg.c
 OBJ = $(SRC:.c=.o)
 
-all: $(LIB_NAME)
+all: $(LIB_FILE)
 
-$(LIB_NAME): $(OBJ)
-	$(CC) $(LDFLAGS) $(OBJ) -o $(LIB_NAME)
+$(LIB_FILE): $(OBJ)
+	$(CC) $(LDFLAGS) $(LIB_LDFLAGS) $(OBJ) -o $(LIB_FILE)
+	ln -sf $(LIB_FILE) $(LIB_FILE_BASE)
 
 .c.o:
 	$(CC) $(EXTRA_CFLAGS) $(CFLAGS) -c $< -o $@
@@ -28,18 +28,18 @@ $(LIB_NAME): $(OBJ)
 $(OBJ): $(INCLUDES)
 
 clean:
-	-rm -f $(OBJ) $(LIB_NAME) 2> /dev/null
+	-rm -f $(OBJ) $(LIB_FILE) $(LIB_FILE_BASE) 2> /dev/null
 
-install: $(LIB_NAME)
+install: $(LIB_FILE)
 	install -m 0755 -d $(PREFIX)/include $(PREFIX)/include/svr $(PREFIX)/bin $(PREFIX)/lib
-	install -m 0644 $(LIB_NAME) $(PREFIX)/lib/$(LIB_NAME).$(MAJOR).$(MINOR).$(REV)
 	install -m 0644 ../include/svr.h $(PREFIX)/include/
 	install -m 0644 ../include/svr/*.h $(PREFIX)/include/svr/
-	ln -sf $(PREFIX)/lib/$(LIB_NAME).$(MAJOR).$(MINOR).$(REV) $(PREFIX)/lib/$(LIB_NAME).$(MAJOR)
-	ln -sf $(PREFIX)/lib/$(LIB_NAME).$(MAJOR).$(MINOR).$(REV) $(PREFIX)/lib/$(LIB_NAME)
+	install -m 0644 $(LIB_FILE) $(PREFIX)/lib/$(LIB_FILE)
+	ln -sf $(PREFIX)/lib/$(LIB_FILE) $(PREFIX)/lib/$(LIB_FILE_BASE)
 
 uninstall:
-	-rm $(PREFIX)/lib/$(LIB_NAME)*
+	-rm $(PREFIX)/lib/$(LIB_FILE)
+	-rm $(PREFIX)/lib/$(LIB_FILE_BASE)
 	-rm $(PREFIX)/include/svr.h
 	-rm -r $(PREFIX)/include/svr
 
