Starting the process of moving from makefiles to CMake! This is so far untested.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,14 @@
 /python/build
 /util/svrwatch
 /util/svrctl
+# The following is taken from https://github.com/github/gitignore/blob/master/CMake.gitignore,
+# which is in the public domain:
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
