Now lib compiles with CMake! :D

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,8 @@ project( svr )
 add_subdirectory( lib )
 # Delete the find_package bits when moving to opencv2
 find_package( PkgConfig REQUIRED )
-pkg_check_modules( OpenCV REQUIRED opencv )
-set( $ENV{CV_LDFLAGS} "${OpenCV_LDFLAGS} ${OpenCV_LDFLAGS_OTHER}" )
-message( "CV_LDFLAGS: ${CV_LDFLAGS}" )
-set( $ENV{CV_CFLAGS} "${OpenCV_CFLAGS} ${OpenCV_CFLAGS_OTHER}" )
-message( "CV_CFLAGS: ${CV_CFLAGS}" )
+pkg_check_modules( OPENCV REQUIRED opencv<2 )
+message(STATUS LIBS ${OPENCV_VERSION})
+
 
 # add_subdirectory( lib python server test util )
