Add one of the tests to CMake

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -5,6 +5,8 @@ include_directories ( ../include/ ${OPENCV_INCLUDE_DIRS} )
 list(APPEND LIBRARIES ${OPENCV_LDFLAGS} )
 add_executable( svrctl svrctl.c )
 add_executable( svrwatch svrwatch.c )
+add_dependencies( svrctl libsvr )
+add_dependencies( svrwatch libsvr )
 install( TARGETS svrctl DESTINATION "bin")
 install( TARGETS svrwatch DESTINATION "bin")
 target_link_libraries( svrctl libsvr seawolf ${OPENCV_LIBRARIES} )
