--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,10 @@ project ( check )
 set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENCV_CFLAGS}") 
 include_directories ( ../include/ ${OPENCV_INCLUDE_DIRS} )
 list(APPEND LIBRARIES ${OPENCV_LDFLAGS} )
-add_executable( check test_source.c )
-add_dependencies( check libsvr )
-# I cannot get the 
-target_link_libraries( check libsvr pthread ${OPENCV_LIBRARIES} )
+add_executable( check-one test.c )
+add_executable( check-two test_source.c )
+add_dependencies( check-one svr )
+add_dependencies( check-two svr )
+# I cannot get the test.c to build
+target_link_libraries( check-one svr pthread ${OPENCV_LIBRARIES} )
+target_link_libraries( check-two svr pthread ${OPENCV_LIBRARIES} )
