--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -5,9 +5,9 @@ include_directories ( ../include/ ${OPENCV_INCLUDE_DIRS} )
 list(APPEND LIBRARIES ${OPENCV_LDFLAGS} )
 add_executable( svrctl svrctl.c )
 add_executable( svrwatch svrwatch.c )
-add_dependencies( svrctl libsvr )
-add_dependencies( svrwatch libsvr )
+add_dependencies( svrctl svr )
+add_dependencies( svrwatch svr )
 install( TARGETS svrctl DESTINATION "bin")
 install( TARGETS svrwatch DESTINATION "bin")
-target_link_libraries( svrctl libsvr seawolf ${OPENCV_LIBRARIES} )
-target_link_libraries( svrwatch libsvr seawolf ${OPENCV_LIBRARIES} )
+target_link_libraries( svrctl svr seawolf ${OPENCV_LIBRARIES} )
+target_link_libraries( svrwatch svr seawolf ${OPENCV_LIBRARIES} )
