--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,7 +4,7 @@ set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CV_CFLAGS} -Wall -Werror" )
 include_directories ( ../include/ ${OPENCV_INCLUDE_DIRS})
 list(APPEND LIBRARIES ${OPENCV_LDFLAGS})
 #message( ${LIBRARIES} )
-add_library ( libsvr SHARED blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c	frameproperties.c encoding.c lockable.c main.c encodings/raw.c responseset.c messagerouting.c messagehandlers.c stream.c source.c comm.c optionstring.c encodings/jpeg.c )
-set_target_properties( libsvr PROPERTIES SOVERSION 0)
-install( TARGETS libsvr DESTINATION "lib")
-target_link_libraries( libsvr pthread seawolf jpeg )
+add_library ( svr SHARED blockalloc.c mempool.c message.c pack.c net.c logging.c refcount.c	frameproperties.c encoding.c lockable.c main.c encodings/raw.c responseset.c messagerouting.c messagehandlers.c stream.c source.c comm.c optionstring.c encodings/jpeg.c )
+set_target_properties( svr PROPERTIES SOVERSION 0)
+install( TARGETS svr DESTINATION "lib")
+target_link_libraries( svr pthread seawolf jpeg )
