Add needed -Wno-unused-function flag back, remove unnecessary includes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,10 +3,7 @@ project ( check )
 set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENCV_CFLAGS}") 
 include_directories ( ../include/ ${OPENCV_INCLUDE_DIRS} )
 list(APPEND LIBRARIES ${OPENCV_LDFLAGS} )
-add_executable( check-one test.c )
-add_executable( check-two test_source.c )
-add_dependencies( check-one svr )
-add_dependencies( check-two svr )
+add_executable( check test.c )
+add_dependencies( check svr )
 # I cannot get the test.c to build
-target_link_libraries( check-one svr pthread ${OPENCV_LIBRARIES} )
-target_link_libraries( check-two svr pthread ${OPENCV_LIBRARIES} )
+target_link_libraries( check svr pthread ${OPENCV_LIBRARIES} )
