--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required (VERSION 3.1)
 project ( util )
-set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENCV_CFLAGS} -Wall -Werror") 
-include_directories ( ../include/ ${OPENCV_INCLUDE_DIRS} )
-list(APPEND LIBRARIES ${OPENCV_LDFLAGS} )
+
+find_package( OpenCV REQUIRED )
+set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenCV_CFLAGS} -Wall -Werror" )
+include_directories ( ${OpenCV_INCLUDE_DIRS} ../include )
+
 add_executable( svrctl svrctl.c )
 add_executable( svrwatch svrwatch.c )
 add_dependencies( svrctl svr )
 add_dependencies( svrwatch svr )
 install( TARGETS svrctl DESTINATION "bin")
 install( TARGETS svrwatch DESTINATION "bin")
-target_link_libraries( svrctl svr seawolf ${OPENCV_LIBRARIES} )
-target_link_libraries( svrwatch svr seawolf ${OPENCV_LIBRARIES} )
+target_link_libraries( svrctl svr seawolf ${OpenCV_LIBRARIES} )
+target_link_libraries( svrwatch svr seawolf ${OpenCV_LIBRARIES} )
