--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,14 @@
 cmake_minimum_required (VERSION 3.1)
 project( svr )
+
+# Global Configuration
+if( ${CMAKE_SYSTEM_NAME} EQUAL "Linux" )
+  set( CMAKE_C_FLAGS "-D__SVR_Linux__" )
+endif()
+
+# Subdirectories to be built
 add_subdirectory( lib )
 add_subdirectory( server )
 add_subdirectory( python )
 add_subdirectory( util )
 add_subdirectory( test )
-## Delete the find_package bits when moving to opencv2
-#find_package( PkgConfig REQUIRED )
-#pkg_check_modules( OPENCV REQUIRED opencv )
-#message(STATUS LIBS ${OPENCV_VERSION} )
-#message("OpenCV ldflags: ${OPENCV_LDFLAGS}")
-#message("OpenCV includes: ${OPENCV_INCLUDE_DIRS}")
-
-# add_subdirectory( lib python server test util )
