--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory( server )
 add_subdirectory( python )
 add_subdirectory( util )
 add_subdirectory( test )
+add_subdirectory( doc )
