Add uninstall target - the CMake build is now on par with the old make build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,17 @@ add_subdirectory( python )
 add_subdirectory( util )
 add_subdirectory( test )
 
+# Add uninstall target, taken from the cmake wiki:
+# https://cmake.org/Wiki/CMake_FAQ#Can_I_do_.22make_uninstall.22_with_CMake.3F
+if(NOT TARGET uninstall)
+    configure_file(
+        "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+        "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+        IMMEDIATE @ONLY)
+
+    add_custom_target(uninstall
+        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
+endif()
+
 # Finally the documentation target, which expects to be built from the toplevel dir
 add_custom_target(doc COMMAND doxygen ${CMAKE_CURRENT_SOURCE_DIR}/doc/Doxyfile)
