Oops, removing a file that I shouldn't have put in the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,4 @@ Testing
 Makefile
 cmake_install.cmake
 install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
+!cmake_uninstall.cmake.in
